--- a/indexstatic.html
+++ b/indexstatic.html
@@ -26,12 +26,6 @@
     <!-- Custom CSS -->
     <link href="css/csoon.css" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
@@ -47,7 +41,7 @@
                 <i class="fa fa-bars fa-2x"></i>
             </button>
             <a class="navbar-brand page-scroll wow fadeInRight" data-wow-duration="1s" data-wow-delay="1.4s" href="#page-top">
-                <span class="logo">CSOON</span> <i class="fa fa-star"></i>
+                <span class="logo">CTC</span> <i class="fa fa-star"></i>
             </a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -348,7 +342,7 @@
             <i class="fa fa-star fa-2x"></i>
         </div>
         <div class="col-md-6">
-            <p>&copy; YOUR WEBSITE 2015</p>
+            <p>&copy; CODE THE COLD 2015</p>
         </div>
         <div class="col-md-3">
             <ul class="list-inline">
